# mediwise_chatbot

./: Dockerfile  README.md  asjsu_HMW5_Nadya_JSON_Function_Calling_MediWise (1).ipynb  asjsu_hmw6_RAG_MediWise_Nadya.ipynb  docker-compose.yaml  example.env  pyproject.toml  requirements.txt
data/: Chatbot Project Corpus Generation.ipynb  doctor_data.json  patient_data.json
sql/: dbinit.sql
src/mediwise_chatbot/: constants.py  file_utils.py  main.py  utils.py
templates/: home.html  layout.html  navbar.html
