[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mediwise_chatbot"
version = '0.0.1'
dynamic = ["dependencies"]
requires-python = ">=3.10"
description = "Healthcare Advice Chatbot!!!"
readme = "README.md"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
chatbot = "mediwise_chatbot.main:entry_local"

[tool.setuptools]
packages = ["mediwise_chatbot"]
package-dir = {"" = "src"}

